deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: django-deployment
  namespace: ingress-nginx
  labels:
    app: django-blog
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: django-blog
  template:
    metadata:
      labels:
        app: django-blog
    spec:
      containers:
      - name: harshmittal18
        image: raghavkhurana21/raghav2:1.0
        ports:
        - containerPort: 8000
